API and behavior across ns-3 releases.

Release 3-dev
=============

Availability
------------
This release is not yet available.

Supported platforms
-------------------
This release has been tested on the following platforms:

New user-visible features
-------------------------
- (internet) Added TCP Vegas congestion control algorithm

Bugs fixed
----------
- Bug 2057 - ARP and Ndisc caches should be updated by receiving valid L3 packets
- Bug 2346 - SixLowPan ConpressionThreshold can be violated.
- Bug 2347 - LrWpan Ascii traces are hooked to the wrong traces.
- Bug 2353 - TCP Vegas implementation

Known issues
------------
In general, known issues are tracked on the project tracker available
at http://www.nsnam.org/bugzilla/

Release 3.25
============

Availability
------------
This release is not yet available.

Supported platforms
-------------------
To be determined.

New user-visible features
-------------------------
- (internet) The native TCP implementation has been refactored, for the following
  improvements:  1) congestion control has been aligned with the Linux
  architecture, to facilitate easier coding of new congestion control algorithms
  or porting implementations from the Linux kernel, 2) Fast Retransmit and Fast
  recovery algorithms, compliant to RFCs, are shared by all TCP variants, unlike
  previous releases. 3) TCP Hybla and TCP HighSpeed have been added.
- (routing) The PrintRoutingTable* functions now print the following informations
  each time they are called: 1) the node ID, 2) the global time, 3) the local time
  4) the routing protocol type
- (internet) L4 protocols (e.g., TCP, UDP, ICMP, etc.) can be demultiplexed by IP
  according to the incoming interface. In other words, it is now possible to
  use specialized L4 protocols according to the interface.
- (internet) Ipv6Address::IsAllHostsMulticast() is now deprecated. FF02::3 is not
  in the official reserved IPv6 multicast address list.