@@ -23,11 +23,13 @@ This release has been tested on the following platforms:
 New user-visible features
 -------------------------
 - (internet) Added TCP Vegas congestion control algorithm
+- (internet) Added TCP Scalable congestion control algorithm
 
 Bugs fixed
 ----------
 - Bug 2057 - ARP and Ndisc caches should be updated by receiving valid L3 packets
 - Bug 2346 - SixLowPan ConpressionThreshold can be violated.
+- Bug 2333 - TCP Scalable implementation
 - Bug 2347 - LrWpan Ascii traces are hooked to the wrong traces.
 - Bug 2353 - TCP Vegas implementation
 
